--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -284,6 +284,10 @@ Compared to Figure~\ref{fig:eur} and Figure~\ref{fig:eth}, gas plot (Figure~\ref
 	\includegraphics[width=\linewidth]{tether.pdf}
 	\caption{Tether with respect to BTC and USD}\label{fig:eur1}
 	\endminipage\hfill
+	\minipage{0.32\textwidth}
+	\includegraphics[width=\linewidth]{figures/BitUSD_labled.png}
+	\caption{BitUSD with respect to BTC and US}\label{fig:bitusd1}
+	\endminipage\hfill
 \end{figure}
 
 
@@ -295,6 +299,7 @@ Compared to Figure~\ref{fig:eur} and Figure~\ref{fig:eth}, gas plot (Figure~\ref
 	\minipage{0.32\textwidth}
 	\includegraphics[width=\linewidth]{withlabels.pdf}
 	\caption{with label}\label{fig:eur1}
+	
 	\endminipage\hfill
 \end{figure}
 
