Update the data sheet + Another BitUSD plot added

--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -285,7 +285,7 @@ Compared to Figure~\ref{fig:eur} and Figure~\ref{fig:eth}, gas plot (Figure~\ref
 	\caption{Tether with respect to BTC and USD}\label{fig:eur1}
 	\endminipage\hfill
 	\minipage{0.32\textwidth}
-	\includegraphics[width=\linewidth]{figures/BitUSD_labled.png}
+	\includegraphics[width=\linewidth]{figures/BitUSD_labled.pdf}
 	\caption{BitUSD with respect to BTC and US}\label{fig:bitusd1}
 	\endminipage\hfill
 \end{figure}
@@ -299,7 +299,10 @@ Compared to Figure~\ref{fig:eur} and Figure~\ref{fig:eth}, gas plot (Figure~\ref
 	\minipage{0.32\textwidth}
 	\includegraphics[width=\linewidth]{withlabels.pdf}
 	\caption{with label}\label{fig:eur1}
-	
+	\endminipage\hfill
+	\minipage{0.32\textwidth}
+	\includegraphics[width=\linewidth]{figures/BitUSD_CoinMarket.pdf}
+	\caption{BitUSD with respect to BTC and US (From CoinMarketCap)}\label{fig:bitusd3}
 	\endminipage\hfill
 \end{figure}
 
