January 9 meeting notes

--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -309,7 +309,28 @@ Compared to Figure~\ref{fig:eur} and Figure~\ref{fig:eth}, gas plot (Figure~\ref
 \section{Conclusion and Discussion}
 In this paper, we analyze the current state of stablecoins with the various options that have been so far proposed to achieve price stability. We also discuss various issues that stablecoins would address. According to the charts represented in the paper, gas is relatively stable in price, while Bitcoin and Ether show volatile behavior. The reason could be the fact that how users interact with the interface to set the gas price when sending transactions to the Ethereum. By analyzing the properties of gas together with the existing methods to create stablecoin, we can later propose what properties stablecoins should attain.
 
-
+\section{January 9 Meeting notes}
+\begin{itemize}
+	\item discussion about the price of a coin backed by fiat currency:
+	what happens to the value of token if half of the supply disappears?
+	what if everyone wants to sell their tokens and get the CAD, USD etc equivalent?
+	why would you want to sell the tokens?: not a successful currency then
+	\item BTC: nothing backs it, not unit of account, good medium of exchange
+	\item Gold: not unit of account, not medium of exchange
+	\item why do we overload the function of money? (no need to fulfill all three properties)
+	\item IMF's SDR (Special Drawing Rights) only Unit of account?
+	\item The model of backing a currency works? Why, why not?
+	\item Discussion about BTC and the hydrocost
+	\item Controlling the amount of money in the circulation: government bonds
+	\item What is stability?
+	Who decides?
+	What do you change?
+	What parameters to consider to apply the change?
+	\item In the case of BTC, cryptocurrencies the number of transactions, how old the coin is affects the value?
+	\item Can a method to stabilize a currency be gamed?: is this method economically sound?
+	\item Bank of England: whitepapers
+	\item Coindesk: list of stablecoins mentioned.
+\end{itemize}
 %\section{Critical Issues with Stable Coins}
 %~\textblue{Combine with conclusion and discussion??}
 %
