details on meeting notes

--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -331,6 +331,41 @@ In this paper, we analyze the current state of stablecoins with the various opti
 	\item Bank of England: whitepapers
 	\item Coindesk: list of stablecoins mentioned.
 \end{itemize}
+
+\subsection {Discussion on the notes}
+\begin{itemize}
+\item What if sob steals all of the reserve (CAD)? then there are two scenarios: 1) people know the reserve is gone so they start converting their tokens back to CAD (for example) so the price of the token will drop. 2) people do not know that the reserve is gone and nobody goes to bank to exchange his token, in this case, it does not affect the price but at the end the token goes bankrupt. 
+What if only half of the reserves disappears? nobody goes to the bank to ask for CAD and  it doesn’t change anything, like USD and gold.
+
+\item Q: We may want to ask this from ourselves when writing the paper: should we actually design a currency (meet 3 properties) 
+
+\item supply and demand :government makes people use their currency
+
+\item BTC and Hydro are not directly connected (not pegging) BTC is not backed by anything
+
+\item  as soon a sth price goes more that 1 dollar > you sell people tokens for 1 dollar so that the price stays the same (currency boards) : pegging : it works until you have your reserves.
+In Canada: they control the amount of money in circulation, increase decrease the supply of money, how they increase the supply of money now? whom do they give it? Answer: they buy things (open market operations)- they go out and buy governments bonds, they borrow the money, from whom? they announce it public so in 5 years they pay you + 5\% (IOU) \par
+They’re doing this based on some information they get, to stabilize the economics but based on what? first it was based on the exchange rate of the CAD (failed) now they are looking at interest rate: there is a certain interest rate they look for, the interest rate where banks lend money to other banks 
+
+\item central bank tried to stabilizes the economy based on exchange rate but it failed.
+\item in BTC : 
+\begin {itemize}
+\item what nub are you turning? (coinbase for now but there could be more)
+\item who will turn the nub? A: a  person B: algorithm that blockchain decides BUT how blockchain knows based on what they could turn the nub (third questions)
+\item what are you looking at to know when to turn the nub? number of tx in block, liquidity in money
+\end{itemize}
+
+\textbf{TO DO:}
+search query on coindesk and we found these projects that are mostly used : looking for the project name \textbf{(Coindesk : every article mentioning stable coin until January 11, 2019)}
+find a report that says how central bank stabilize : bank of England has a bunch of white papers -> "Banks used the exchange rate but it failed “ phrase is from one of it white papers.
+
+\end{itemize}
+
+
+
+
+
+
 %\section{Critical Issues with Stable Coins}
 %~\textblue{Combine with conclusion and discussion??}
 %
