Corresponding Section and Table for comparing stablecoin projects added

--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -306,8 +306,27 @@ Compared to Figure~\ref{fig:eur} and Figure~\ref{fig:eth}, gas plot (Figure~\ref
 	\endminipage\hfill
 \end{figure}
 
+\section{How Current Stablecoin Projects  Achieve Stability?}
+We performed a search query on \texttt{coindesk.com} and found the following projects which are mostly used in every articles published about stablecoins until January 11, 2019. \footnote{https://www.coindesk.com/} Table~\ref{tab:stablecoins} represents these projects and the methods they apply to achieve stability.
+
+\begin{table}[t]
+\centering
+\begin{tabular}{|l|l|}  
+\hline
+\textbf{Stablecoin Project} & \textbf{Method of Achieving Stability}   \\ \hline
+Sample1 & \\ \hline
+Sample2 & \\
+\hline
+\end{tabular}
+\caption{\footnotesize{Stablecoin projects.}\label{tab:stablecoins}}
+\end{table}
+
+
+
+
 \section{Conclusion and Discussion}
 In this paper, we analyze the current state of stablecoins with the various options that have been so far proposed to achieve price stability. We also discuss various issues that stablecoins would address. According to the charts represented in the paper, gas is relatively stable in price, while Bitcoin and Ether show volatile behavior. The reason could be the fact that how users interact with the interface to set the gas price when sending transactions to the Ethereum. By analyzing the properties of gas together with the existing methods to create stablecoin, we can later propose what properties stablecoins should attain.
+
 
 \section{January 9 Meeting notes}
 \begin{itemize}
