Notes from January 22nd meeting

--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -307,7 +307,7 @@ Compared to Figure~\ref{fig:eur} and Figure~\ref{fig:eth}, gas plot (Figure~\ref
 \end{figure}
 
 \section{How Current Stablecoin Projects  Achieve Stability?}
-We performed a search query on \texttt{coindesk.com} and found the following projects which are mostly used in every articles published about stablecoins until January 11, 2019. \footnote{https://www.coindesk.com/} Table~\ref{tab:stablecoins} represents these projects and the methods they apply to achieve stability.
+We performed a search query on \texttt{coindesk.com} and found the following projects which are mostly used in every articles published about stablecoins until January 11, 2019. \footnote{https://www.coindesk.com/} Table~\ref{tab:stablecoins} represents these projects and the methods they apply to achieve stability. (we should mention the search term that we used to extract our resources from coindesk)
 
 
 \textbf{Distribution of articles speaking about stablecoin:} 2014: 2, 2017: 4, 2018: 112, 2019 (up to Jan 11): 4.
@@ -329,6 +329,15 @@ Sample2 & \\
 
 \section{Conclusion and Discussion}
 In this paper, we analyze the current state of stablecoins with the various options that have been so far proposed to achieve price stability. We also discuss various issues that stablecoins would address. According to the charts represented in the paper, gas is relatively stable in price, while Bitcoin and Ether show volatile behavior. The reason could be the fact that how users interact with the interface to set the gas price when sending transactions to the Ethereum. By analyzing the properties of gas together with the existing methods to create stablecoin, we can later propose what properties stablecoins should attain.
+
+\section{January 22 Meeting notes: talks about the paper structure}
+
+The paper will include three main parts: 
+1) we talk about volatility and what does stability mean, and we make argument that we're not economist and everything is explained in our own language.
+2) Systemization of stablecoin and justification
+3) Have a discussion about Gas: Gas is not a currency so you cannot buy things with it BUT you can have a smart contract and swap it with other tokens.  Gas is actually stable with respect to others, the reason ir's not obvious is human error and usability stuff. Gas is not pegged to anything. Also it would be nice to have a chart : Ether, Electricity (Global energy index), and Gas
+
+
 
 
 \section{January 9 Meeting notes}
