the stablecoins systemization Table added

--- a/stable-coin-paper/main.tex
+++ b/stable-coin-paper/main.tex
@@ -9,8 +9,13 @@
 
 \input{setup/packages}
 \input{setup/macros}
-\input{setup/table}
 
+
+\usepackage{draftwatermark}
+\SetWatermarkAngle{90}
+\SetWatermarkHorCenter{0.2\textwidth}
+\SetWatermarkColor{blue}
+\SetWatermarkText{Working Draft}
 % = = = = = Title = = = = = %
 
 \begin{document}
