--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -47,6 +47,9 @@ We performed a search query on \texttt{coindesk.com} and found the following pro
 
 
 \textbf{Distribution of articles speaking about stablecoin:} 2014: 2, 2017: 4, 2018: 112, 2019 (up to Jan 11): 4.
+
+\input{setup/table} 
+
 %==========================================%
 
 \section{Investigation of gas volatility}
