--- a/stable-coin-paper/setup/packages.tex
+++ b/stable-coin-paper/setup/packages.tex
@@ -14,6 +14,7 @@
 % = = = Subfig (note not subfigure)
 \usepackage[caption=false,font=footnotesize]{subfig}
 
+
 % = = = Math Symbols
 \usepackage{amsmath}
 %\usepackage{amstext,amssymb,amsthm}
@@ -39,7 +40,7 @@
 \usepackage[justification=centering]{caption} % to add caption in tabular environment using the command \captionof{table}{Your caption here} 
 \usepackage{cite}
 
-
+\usepackage{colortbl}
 
 %---------------------------------------------------%
 \usepackage{listings, xcolor}
