--- a/stable-coin-paper/setup/table.tex
+++ b/stable-coin-paper/setup/table.tex
@@ -1,12 +1,68 @@
 % !TEX root = ../main.tex
+
+
 %-------------------Fancy Table ----------------------%
 
 % = = = Rotated Table Entry \headrow
 
-\usepackage{adjustbox}
-\newcommand{\headrow}[1]{\multicolumn{1}{c}{\adjustbox{angle=45,lap=\width-0.5em}{#1}}}
+%\usepackage{adjustbox}
+%\newcommand{\headrow}[1]{\multicolumn{1}{c}{\adjustbox{angle=45,lap=\width-0.5em}{#1}}}
 
 % = = = Table bullets: \full and \prt (full and part)
 
 \newcommand{\full}{$\bullet$}
 \newcommand{\prt}{$\circ$}
+% ------------------------------------------------------------------------------------------------------------------------------------------------%
+%Stablecoin projects%
+
+\definecolor{UnitedNationBlue}{rgb}{0.30,0.53,1}
+\definecolor{LightSteelBlue}{rgb}{0.69,0.77,0.87}
+\definecolor{LightGrey}{rgb}{0.83,0.83,0.83}
+
+
+\begin{table}[h!]
+\centering
+
+\begin{tabular}{|c|c|c|l|}
+
+\hline
+\rowcolor{LightSteelBlue}
+ \textbf{DApp Category}    										& \textbf{Names} & Rank \\  \hline
+\multirow{6}{*}{Exchanges} 										& IDEX & 1 \\ 
+															& \cellcolor{LightGrey} \textbf{ForkDelta, EtherDelta} & 2 \\
+															& \cellcolor{LightGrey} \textbf{Bancor} & 7 \\
+															& The Token Store & 13 \\
+															& LocalEthereum & 14 \\
+															& Kyber & 22 \\ 
+															& \cellcolor{LightGrey} \textbf{0x Protocol} & 23 \\ \hline
+
+\multirow{9}{*}{\shortstack{Crypto-Collectible \\ Games \\ (ERC-721)}}
+															& \cellcolor{LightGrey} \textbf{CryptoKitties} & 3 \\  
+															& Ethermon & 4\\
+															& Cryptogirl & 9\\
+															& Gods Unchained TCG & 12\\
+															& Blockchain Cuties & 15\\
+															& ETH.TOWN! & 16\\
+															& 0xUniverse & 18\\
+															& MLBCrypto Baseball & 19\\
+															& HyperDragons & 25\\ \hline
+
+					
+\multirow{8}{*}{Gambling}										& \cellcolor{LightGrey} \textbf{Fomo3D} & 5 \\  
+															& DailyDivs & 6 \\													& PoWH 3D & 8	 \\ 
+															& FomoWar & 10 \\
+															& FairDapp & 11\\
+															& Zethr & 17 \\
+															& dice2.win & 20 \\ 
+															& Ether Shrimp Farm & 21 \\  \hline	
+
+							
+\multirow{1}{*}{Name Services}									& \cellcolor{LightGrey} \textbf{Ethereum Name Service} & 24  \\  \hline	
+
+
+\end{tabular}
+\caption{\footnotesize{Systemization the current stablecoin projects} on January 11, 2019. The Projects that are in bold are discussed in this paper.}
+\label{tab:stablecoins}
+\vspace{1em}
+\end{table}
+% ------------------------------------------------------------------------------------------------------------------------------------------------%
