--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -1,25 +1,25 @@
 % !TEX root = ../main.tex
 %==========================================%
 
-\section{Introduction}\label{Intro} 
+\section{Introduction}\label{Intro}
 
 \textblue{Give a brief introduction on Bitcoin and crypto-currencies and the state of stablecoins in general.}
 
 
-% It is difficult to define a stable coin because, the more we read, it captures a negative sentiment (what a coin ought not to be) more than what a coin ought to be. It ought not to be like Bitcoin, whose volatility is high. 
+% It is difficult to define a stable coin because, the more we read, it captures a negative sentiment (what a coin ought not to be) more than what a coin ought to be. It ought not to be like Bitcoin, whose volatility is high.
 
-% Stablecoins are a topic of recent interest. A lot of blogs and some academic articles have systemized them. We know that the reader of this paper is expecting a chart of coins and what mechanisms they use: we do provide that, but we do not consider that the core contribution of the paper at all. Instead we really dug into finance to deeply understand the core methods and mechanisms that are employed for reducing volatility of a coin. We feel our paper is closer to a tutorial on stablecoins where we try to eliminate all the jargon (which is often misused and imprecisely applied) to explain the concepts, as well as drawing out appropriate foundations from finance. 
+% Stablecoins are a topic of recent interest. A lot of blogs and some academic articles have systemized them. We know that the reader of this paper is expecting a chart of coins and what mechanisms they use: we do provide that, but we do not consider that the core contribution of the paper at all. Instead we really dug into finance to deeply understand the core methods and mechanisms that are employed for reducing volatility of a coin. We feel our paper is closer to a tutorial on stablecoins where we try to eliminate all the jargon (which is often misused and imprecisely applied) to explain the concepts, as well as drawing out appropriate foundations from finance.
 
 % Example: if we described the approach of stable coin in two simple words: ``currency board'' and you need no further explanation (just, perhaps, some details on the parameters), this paper is not for you. If you have heard the term and have a vague sense of how it works, but couldn't really explain it or why it achieves stability, this paper is for you. If you have never heard the term, this paper is also for you.
 
-% Two basic concepts: (1) a tokenization of a fiat currency (say a digital dollar) or any asset or asset portfolio of assets. This is an old idea: liberty reserve, eGold. (2) a low-volatility coin that is tied to any existing asset. For example, with USD as the baseline, Euros are much more stable than Bitcoin. It is not because Euros are backed by USD or have any direct reference to the USD. It is because USD and Euros use the same model, a central bank management, with similar inputs (the interest rates their customers, commercial banks, use when lending cash to each other to meet various legal requirements that help ensure the banks will have enough cash on hand to server their customers and can withstand some of their investments going bad without going bankrupt). 
+% Two basic concepts: (1) a tokenization of a fiat currency (say a digital dollar) or any asset or asset portfolio of assets. This is an old idea: liberty reserve, eGold. (2) a low-volatility coin that is tied to any existing asset. For example, with USD as the baseline, Euros are much more stable than Bitcoin. It is not because Euros are backed by USD or have any direct reference to the USD. It is because USD and Euros use the same model, a central bank management, with similar inputs (the interest rates their customers, commercial banks, use when lending cash to each other to meet various legal requirements that help ensure the banks will have enough cash on hand to server their customers and can withstand some of their investments going bad without going bankrupt).
 
-% Most of the coins are mostly focusing on the supporting infrastructure, maybe we also have to talk about the supporting infrastructure of the stablecoin 
+% Most of the coins are mostly focusing on the supporting infrastructure, maybe we also have to talk about the supporting infrastructure of the stablecoin
 % Talk about the crypto custodianship somewhere in the paper
 %==========================================%
 
 \subsection{Motivation} %need a better name
-\textblue{In this section we talk about volatility and what does stability mean, and we make argument that we're not economist and everything is explained in our own language} 
+\textblue{In this section we talk about volatility and what does stability mean, and we make argument that we're not economist and everything is explained in our own language}
 Cryptocurrencies have gained a wide application after Bitcoin was first introduced in Satoshi Nakamoto’s (pseudonymous) 2008 whitepaper~\cite{nakamoto2008bitcoin}. For Bitcoin and any other cyptocurrency to function as money, they need to fulfill a set of properties that determine the strength and adoption of them \ie they are expected to serve as a medium of exchange, a unit of account, and a store of value. However, due to high fluctuations in their prices, majority of the cryptocurrencies do not meet these properties and hence they cannot be adopted as money~\cite{overview}.
 
 Having said that, the volatile nature of cryptocurrencies (\eg Ether, Bitcoin) has raised the interest into what is known as stablecoin. Stablecoins (\ie cryptocurrencies with stable price) ensure that the fluctuation in the value remains low. Figure~\ref{fig:btcandfiat} illustrates the volatility of Bitcoin's value, when compared to fiat currencies, and the change of values of EUR, GBP, CAD, and BTC with respect to USD over time. Monthly values between January 2016 and November 2018 are shown. According the figures, while fiat currencies show stable behaviour, Bitcoin's value changes drastically over time, which makes it a non-stable cryptocurrency.
@@ -44,15 +44,15 @@ Considering these facts, there is a desire to design stablecoins with the stable
 \subsection{Valuation}
 % Every thing has two prices
 
-How do we assign value to something? how do we establish what something is worth? 
-The value is usually given in some units of account (\eg CAD). When we establish a value for something, we do. not really claim what the value and what it worths, instead, we establish a value of its exchange. For example, today Alice is willing to pay 500 CAD for Bob's phone, whereas tomorrow, she will pay 600 CAD. What happened in this case? It could be (i) the value of money (CAD) going down or (ii) the value of good (phone) going up. Thus, in order to establish how much value something has, we should think of it in terms of being an exchange rate (the exchange rate between that asset and some other valuable assets). In other words, if Bob is willing to offer his phone for 1000 CAD, does it mean that it worths 1000 CAD? What we know about is that the value of Bob's phone is somewhere between 500 CAD (which Alice is willing to bid) and 1000 CAD (which Bob is willing to accept/ask). Therefore, the value of an object is not a single value 
+How do we assign value to something? how do we establish what something is worth?
+The value is usually given in some units of account (\eg CAD). When we establish a value for something, we do. not really claim what the value and what it worths, instead, we establish a value of its exchange. For example, today Alice is willing to pay 500 CAD for Bob's phone, whereas tomorrow, she will pay 600 CAD. What happened in this case? It could be (i) the value of money (CAD) going down or (ii) the value of good (phone) going up. Thus, in order to establish how much value something has, we should think of it in terms of being an exchange rate (the exchange rate between that asset and some other valuable assets). In other words, if Bob is willing to offer his phone for 1000 CAD, does it mean that it worths 1000 CAD? What we know about is that the value of Bob's phone is somewhere between 500 CAD (which Alice is willing to bid) and 1000 CAD (which Bob is willing to accept/ask). Therefore, the value of an object is not a single value
 
 \subsection{Exchange}
 
 \clearpage
-\subsection{No-Seignorage Theory of Money} 
+\subsection{No-Seignorage Theory of Money}
 
-To explain Bitcoin's exchange rate with fiat currencies, an oft-repeated theory has emerged that attributes Bitcoin's value to the hydro consumed by blockchain mining. While imprecise, the theory suggests that if a valuable resource $x$ is consumed to produce $y$, the value of $x$ is imparted into $y$. Setting aside the nuance that the hydro contributed to the Bitcoin system only indirectly produces new coins (it produces blocks, and blocks produce coins only for now), there is no economic principle underlying this transfer of value. 
+To explain Bitcoin's exchange rate with fiat currencies, an oft-repeated theory has emerged that attributes Bitcoin's value to the hydro consumed by blockchain mining. While imprecise, the theory suggests that if a valuable resource $x$ is consumed to produce $y$, the value of $x$ is imparted into $y$. Setting aside the nuance that the hydro contributed to the Bitcoin system only indirectly produces new coins (it produces blocks, and blocks produce coins only for now), there is no economic principle underlying this transfer of value.
 
 If Alice goes to Peter Luger's in Brooklyn, consumes a \$100 ribeye, and mints a literal shitcoin out of the result --- is that coin worth \$100 because it is ``backed'' by \$100 worth of steak?
 
@@ -63,69 +63,69 @@ If Alice goes to Peter Luger's in Brooklyn, consumes a \$100 ribeye, and mints a
 
 % Dollar tokenization vs. low volatitility
 
-\input{setup/table} 
+\input{setup/table}
 
 % Jeremy: How do we make a stable coin.
 % Jeremy: Table here
 
-\subsection{Redeemable and Directly-Backed.} 
+\subsection{Redeemable and Directly-Backed.}
 % Description of how it works: Desposit in bank, etc
 % Justification that bids will never exceed $1: an arbitrageur will pay $1 to mint 1 XSC and the 1 XSC for the bid
 % Justification that offers will be less than $1: an arbitrageur will purchase the 1 XSC and redeem it for $1
-% Risk: not redeemable -> redemption is not 100%, the coin will be offered at less than $1. E.g., offers of $0.50, says 50% it can't be redeemed. 
+% Risk: not redeemable -> redemption is not 100%, the coin will be offered at less than $1. E.g., offers of $0.50, says 50% it can't be redeemed.
 % Examples: Gemini
 
 
-\subsection{Non-Redeemable and Directly-Backed.} 
+\subsection{Non-Redeemable and Directly-Backed.}
 % Description of how it works. Deposit in bank, etc
-% Justification that bids will never exceed $1: 
-% Justification that offers will be less than $1 
+% Justification that bids will never exceed $1:
+% Justification that offers will be less than $1
 % Examples: Tether
-% Remarks: 
+% Remarks:
 
 
-\subsection{Non-Redeemable and indirectly-Backed.} 
+\subsection{Non-Redeemable and indirectly-Backed.}
 % Description of how it works.
 % Justification that bids will never exceed $1
-% Justification that offers will be less than $1 
-% Examples: 
+% Justification that offers will be less than $1
+% Examples:
 % Remarks: Oracles
 
 
-\subsection{Redeemable and indirectly-Backed.} 
+\subsection{Redeemable and indirectly-Backed.}
 % Description of how it works.
 % Justification that bids will never exceed $1
 % Justification that offers will be less than $1
-% Examples: 
+% Examples:
 
- \subsection{Currency Board.} 
+ \subsection{Currency Board.}
 % Description of how it works.
 % Justification that bids will never exceed $1
 % Justification that offers will be less than $1
-% Examples: 
+% Examples:
 
 \subsection{Algorithmic}
 
-% Control system: input (metrics), make a decision, implement the intervention 
-% We cannot prove that something here works or not. It is all heuristics. We know this because central banks themselves operate on heuristics that change every couple of decades. Even if we cannot say something does work, we can point out a few suggestions that it will not work. Game-able inputs, inputs/interventions that have not worked for currency. 
+% Control system: input (metrics), make a decision, implement the intervention
+% We cannot prove that something here works or not. It is all heuristics. We know this because central banks themselves operate on heuristics that change every couple of decades. Even if we cannot say something does work, we can point out a few suggestions that it will not work. Game-able inputs, inputs/interventions that have not worked for currency.
 
-\subsection{Algorithmic with subjective external information} 
+\subsection{Algorithmic with subjective external information}
 % Description of how it works.
 % Justification that bids will never exceed $1
 % Justification that offers will be less than $1
 % Examples: RSCoin
 
-\subsection{Algorithmic with objective external information} 
+\subsection{Algorithmic with objective external information}
 % Description of how it works.
 % Justification that bids will never exceed $1
 % Justification that offers will be less than $1
-% Examples: 
+% Examples:
 
-\subsection{Algorithmic with only internal information} 
+\subsection{Algorithmic with only internal information}
 % Description of how it works.
 % Justification that bids will never exceed $1
 % Justification that offers will be less than $1
-% Examples: 
+% Examples:
 
 We performed a search query on \texttt{coindesk.com} and found the following projects which are mostly used in every articles published about stablecoins until January 11, 2019. \footnote{https://www.coindesk.com/} Table~\ref{tab:stablecoins} represents these projects and the methods they apply to achieve stability. (we should mention the search term that we used to extract our resources from coindesk)
 
@@ -141,27 +141,28 @@ Our analysis in Section~\ref{Intro} shows that cryptocurrencies exhibit less sta
 
 %========================%
 
-\begin{figure}[!htb]
-	\centering
-	\includegraphics[width=0.95\textwidth]{figures/eur.pdf}
-	\caption{\label{fig:eur} EUR with respect to BTC and gold.}
-\end{figure}
+%\begin{figure}[!htb]
+%	\centering
+%	\includegraphics[width=0.95\textwidth]{figures/eur.pdf}
+%	\caption{\label{fig:eur} EUR with respect to BTC and gold.}
+%\end{figure}
 %========================%
 
-\begin{figure}[!htb]
-	\centering
-	\includegraphics[width=0.95\textwidth]{figures/eth.pdf}
-	\caption{\label{fig:eth} ETH with respect to BTC and gold.}
-\end{figure}
+%\begin{figure}[!htb]
+%	\centering
+%	\includegraphics[width=0.95\textwidth]{figures/eth.pdf}
+%	\caption{\label{fig:eth} ETH with respect to BTC and gold.}
+%\end{figure}
 %========================%
 
-\begin{figure}[!htb]
-	\centering
-	\includegraphics[width=0.95\textwidth]{figures/gas.pdf}
-	\caption{\label{fig:gas} Gas with respect to BTC and gold.}
-\end{figure}
+%\begin{figure}[!htb]
+%	\centering
+%	\includegraphics[width=0.95\textwidth]{figures/gas.pdf}
+%	\caption{\label{fig:gas} Gas with respect to BTC and gold.}
+%\end{figure}
 %========================%
 
+%references to figures wrong now!
 
 Figures~\ref{fig:eur}-~\ref{fig:gas} illustrate how the values of EUR, ETH and Gas change with respect to BTC and gold. EUR plot in Figure~\ref{fig:eur} tends to have more movements in the directions 1-5 and 3-7 suggesting that while the value of EUR stays the same according to one axis, it changes according to the other. For instance, between June 2018 and August 2018, the value of EUR increased with respect to BTC, while it stayed the same according to USD. This type of movement suggests that EUR-USD exchange rate is going under less change, whereas BTC-EUR rate is subject to high volatility. On the other hand, in the first half of 2017, while EUR retained its value against BTC, EUR to USD rate went under change.
 
@@ -189,48 +190,45 @@ Compared to Figure~\ref{fig:eur} and Figure~\ref{fig:eth}, gas plot (Figure~\ref
 
 \begin{figure}[!htb]
 	\minipage{0.32\textwidth}
-	\includegraphics[width=\linewidth]{cad.pdf}
-	\caption{CAD with respect to BTC and USD}\label{fig:cad1}
+	\includegraphics[width=\linewidth]{figures/cad.pdf}
+	\caption{CAD with respect to BTC and USD}\label{fig:cad}
 	\endminipage\hfill
 	\minipage{0.32\textwidth}
-	\includegraphics[width=\linewidth]{eur3.pdf}
-	\caption{EUR with respect to BTC and USD}\label{fig:eur1}
+	\includegraphics[width=\linewidth]{figures/eur.pdf}
+	\caption{EUR with respect to BTC and USD}\label{fig:eur}
 	\endminipage\hfill
 	\minipage{0.32\textwidth}%
-	\includegraphics[width=\linewidth]{gbp.pdf}
-	\caption{GBP with respect to BTC and USD}\label{fig:gbp1}
+	\includegraphics[width=\linewidth]{figures/gbp.pdf}
+	\caption{GBP with respect to BTC and USD}\label{fig:gbp}
 	\endminipage
 \end{figure}
 %========================%
 
 \begin{figure}[!htb]
 	\minipage{0.32\textwidth}
-	\includegraphics[width=\linewidth]{eth3.pdf}
-	\caption{ETH with respect to BTC and USD}\label{fig:cad1}
+	\includegraphics[width=\linewidth]{figures/eth.pdf}
+	\caption{ETH with respect to BTC and USD}\label{fig:eth}
 	\endminipage\hfill
 	\minipage{0.32\textwidth}
-	\includegraphics[width=\linewidth]{xrp.pdf}
-	\caption{XRP with respect to BTC and USD}\label{fig:eur1}
+	\includegraphics[width=\linewidth]{figures/xrp.pdf}
+	\caption{XRP with respect to BTC and USD}\label{fig:xrp}
 	\endminipage\hfill
 	\minipage{0.32\textwidth}%
-	\includegraphics[width=\linewidth]{eos.pdf}
-	\caption{EOS with respect to BTC and USD}\label{fig:gbp1}
+	\includegraphics[width=\linewidth]{figures/eos.pdf}
+	\caption{EOS with respect to BTC and USD}\label{fig:eos}
 	\endminipage
 \end{figure}
 %========================%
 
 \begin{figure}[!htb]
+
 	\minipage{0.32\textwidth}
-	\includegraphics[width=\linewidth]{gas3.pdf}
-	\caption{Gas with respect to BTC and USD}\label{fig:cad1}
+	\includegraphics[width=\linewidth]{figures/tether.pdf}
+	\caption{Tether with respect to BTC and USD}\label{fig:tether}
 	\endminipage\hfill
 	\minipage{0.32\textwidth}
-	\includegraphics[width=\linewidth]{tether.pdf}
-	\caption{Tether with respect to BTC and USD}\label{fig:eur1}
-	\endminipage\hfill
-	\minipage{0.32\textwidth}
-	\includegraphics[width=\linewidth]{figures/BitUSD_labled.pdf}
-	\caption{BitUSD with respect to BTC and US}\label{fig:bitusd1}
+	\includegraphics[width=\linewidth]{figures/bitusd.pdf}
+	\caption{BitUSD with respect to BTC and US}\label{fig:bitusd}
 	\endminipage\hfill
 \end{figure}
 
@@ -238,16 +236,12 @@ Compared to Figure~\ref{fig:eur} and Figure~\ref{fig:eth}, gas plot (Figure~\ref
 
 \begin{figure}[!htb]
 	\minipage{0.32\textwidth}
-	\includegraphics[width=\linewidth]{withoutlabels.pdf}
-	\caption{no label}\label{fig:cad1}
+	\includegraphics[width=\linewidth]{figures/gas.pdf}
+	\caption{Gas with respect to BTC and USD}\label{fig:gas}
 	\endminipage\hfill
 	\minipage{0.32\textwidth}
-	\includegraphics[width=\linewidth]{withlabels.pdf}
-	\caption{with label}\label{fig:eur1}
-	\endminipage\hfill
-	\minipage{0.32\textwidth}
-	\includegraphics[width=\linewidth]{figures/BitUSD_CoinMarket.pdf}
-	\caption{BitUSD with respect to BTC and US (From CoinMarketCap)}\label{fig:bitusd3}
+	\includegraphics[width=\linewidth]{figures/gasElectricity.pdf}
+	\caption{Gas with respect to BTC and USD}\label{fig:gasElectricity}
 	\endminipage\hfill
 \end{figure}
 %==========================================%
@@ -256,7 +250,7 @@ Compared to Figure~\ref{fig:eur} and Figure~\ref{fig:eth}, gas plot (Figure~\ref
 In this paper, we analyze the current state of stablecoins with the various options that have been so far proposed to achieve price stability. We also discuss various issues that stablecoins would address. According to the charts represented in the paper, gas is relatively stable in price, while Bitcoin and Ether show volatile behavior. The reason could be the fact that how users interact with the interface to set the gas price when sending transactions to the Ethereum. By analyzing the properties of gas together with the existing methods to create stablecoin, we can later propose what properties stablecoins should attain.
 
 %==========================================%
-\section{The current state of stablecoins (might be needed for the paper)} 
+\section{The current state of stablecoins (might be needed for the paper)}
 
 %different ways and issues with each. %~\cite{euromoney}
 Stablecoins have a market value of \$3 billion and this corresponds to the 1.5\% of the total market value of the cryptoassets~\cite{report}. Each proposing different properties, stablecoins can be categorized into three groups based on the way they achieve stability: fiat-collateralized, crypto-collateralized, and non-collateralized.
@@ -328,10 +322,10 @@ Although cryptocurrencies, especially Bitcoin, play a revolutionary role in fina
 
 \subsection {Discussion on the notes}
 \begin{itemize}
-\item What if sob steals all of the reserve (CAD)? then there are two scenarios: 1) people know the reserve is gone so they start converting their tokens back to CAD (for example) so the price of the token will drop. 2) people do not know that the reserve is gone and nobody goes to bank to exchange his token, in this case, it does not affect the price but at the end the token goes bankrupt. 
+\item What if sob steals all of the reserve (CAD)? then there are two scenarios: 1) people know the reserve is gone so they start converting their tokens back to CAD (for example) so the price of the token will drop. 2) people do not know that the reserve is gone and nobody goes to bank to exchange his token, in this case, it does not affect the price but at the end the token goes bankrupt.
 What if only half of the reserves disappears? nobody goes to the bank to ask for CAD and  it doesn’t change anything, like USD and gold.
 
-\item Q: We may want to ask this from ourselves when writing the paper: should we actually design a currency (meet 3 properties) 
+\item Q: We may want to ask this from ourselves when writing the paper: should we actually design a currency (meet 3 properties)
 
 \item supply and demand :government makes people use their currency
 
@@ -339,10 +333,10 @@ What if only half of the reserves disappears? nobody goes to the bank to ask for
 
 \item  as soon a sth price goes more that 1 dollar > you sell people tokens for 1 dollar so that the price stays the same (currency boards) : pegging : it works until you have your reserves.
 In Canada: they control the amount of money in circulation, increase decrease the supply of money, how they increase the supply of money now? whom do they give it? Answer: they buy things (open market operations)- they go out and buy governments bonds, they borrow the money, from whom? they announce it public so in 5 years they pay you + 5\% (IOU) \par
-They’re doing this based on some information they get, to stabilize the economics but based on what? first it was based on the exchange rate of the CAD (failed) now they are looking at interest rate: there is a certain interest rate they look for, the interest rate where banks lend money to other banks 
+They’re doing this based on some information they get, to stabilize the economics but based on what? first it was based on the exchange rate of the CAD (failed) now they are looking at interest rate: there is a certain interest rate they look for, the interest rate where banks lend money to other banks
 
 \item central bank tried to stabilizes the economy based on exchange rate but it failed.
-\item in BTC : 
+\item in BTC :
 \begin {itemize}
 \item what nub are you turning? (coinbase for now but there could be more)
 \item who will turn the nub? A: a  person B: algorithm that blockchain decides BUT how blockchain knows based on what they could turn the nub (third questions)
